--- a/练习/test.html
+++ b/练习/test.html
@@ -8,29 +8,18 @@
 </head>
 <style>
     .box {
-        overflow: hidden;
+        width: 100px;
+        height: 100px;
     }
 
-    .left {
-        float: left;
-        width: 200px;
-        height: 500px;
-        background-color: pink;
-    }
-
-    .right {
-        /* margin-left: 200px; */
-        display: flow-root;
-        height: 500px;
-        background-color: gray;
+    .p {
+        color: red;
     }
 </style>
 
 <body>
-    <div class="box">
-        <div class="left"></div>
-        <div class="right"></div>
-    </div>
+    <p class="p">123
+    <div class="box">131321</div>132</p>
 </body>
 
 </html>
