--- a/11.html
+++ b/11.html
@@ -1,112 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <script>
-        // let n = parseInt(prompt('字符串个数'));
-        // let str = new Array;
-        // for(let i=0 ;i < n ;i++){
-        //     str[i]=prompt('输入字符串');
-        // }
-        // str = [...new Set( str )];
-        // console.log(str.length);
-        // let a = 'aaa aaa bb aab aa  bb';
-        // let s = new Set();
-        // a.split('').forEach(item => s.add(item));
-        // console.log(s);
-        // let arr1 = '2 5 18 21 27 34 41 61 62 69 78 81 91 92 95'.split(' ').map(Number);
-        // let arr2 = '0 4 16 24 27 36 42 45 53 58 64 67 82 91 95'.split(' ').map(Number);
-        // let arr = new Array();
-        // let j = 0;
-        // let k = 0;
-        // for(let i=0;i<30;i++){
-        //     if(arr1[k]>arr2[j]){
-        //         arr.push(arr2[j]);
-        //         j++;
-        //     }
-        //     else if(arr1[k]<arr2[j]){
-        //         arr.push(arr1[k]);
-        //         k++;
-        //     }
-        //     else{
-        //         if(arr1[k]==undefined){
-        //             arr.push(arr2[j]);
-        //             j++; 
-        //         }
-        //         else{
-        //             arr.push(arr1[k]);
-        //             k++;
-        //         }
-        //     }
-        // }
-        // console.log(...arr);
-        // let k = 19;
-
-        // function fibonacci(n) {
-        //     if (n == 1 || n == 2) {
-        //         return 1
-        //     };
-        //     return fibonacci(n - 2) + fibonacci(n - 1);
-        // }
-        // 7 3
-        // 1 2 3 1 2 1 3
-        // 1 2 3
-        // let n = 7;
-        // let m = 3;
-        // let arr1 = '1 2 3 1 2 1 3'.split(' ').map(Number);
-        // let arr2 = '1 2 3'.split(' ').map(Number);
-        // let num = 0;
-        // let connect = false;
-        // let count = function(a,b){
-        //     num=0;
-        //     for(let i=0;i<a.length;i++){
-        //         if(a[i]>b&&connect==false){
-        //             num++;
-        //             connect = true;
-        //         }
-        //         else if(a[i]===b){
-        //             connect = false;
-        //         }
-        //     }
-        //     return num;
-        // }
-        // let res = new Array();
-        // for(let i = 0;i<m;i++){
-        //     res.push(count(arr1,arr2[i]))
-        // }
-        // console.log(res);
-        // let get = readline().split(' ').map(Number);
-// let n = 7;
-// let m = 3;
-// let arr1 = '1 2 3 1 2 1 3 3 3 1'.split(' ').map(Number);
-// let arr2 = '1 2 3'.split(' ').map(Number);
-// let num = 0;
-// let connect = false;
-// let count = function(a,b){
-//     num=0;
-//     for(let i=0;i<a.length;i++){
-//         if(a[i]>b&&connect==false){
-//             num++;
-//             connect = true;
-//         }
-//         else if(a[i]===b){
-//             connect = false;
-//         }
-//     }
-//     return num;
-// }
-// let res = new Array();
-// for(let i = 0;i<m;i++){
-//     res.push(count(arr1,arr2[i]))
-// }
-// for(let i=0;i<res.length;i++){
-//     console.log(res[i]);
-// }
-    </script>
-</body>
-</html>
+<table style="width: 99.8%;height:99.8% ">
+    <td>
+        <div
+            style="border-radius: 10px 10px 10px 10px;font-size:16px;color: #555555;width: 666px;font-family:'Century Gothic','Trebuchet MS','Hiragino Sans GB',微软雅黑,'Microsoft Yahei',Tahoma,Helvetica,Arial,'SimSun',sans-serif;margin:50px auto;border:1px solid #eee;max-width:100%;background: #ffffff repeating-linear-gradient(-45deg,#fff,#fff 1.125rem,transparent 1.125rem,transparent 2.25rem);box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);">
+            <div
+                style="width:100%;background:#4af6de;color:#ffffff;border-radius: 10px 10px 0 0;background-image: -moz-linear-gradient(0deg, rgb(67, 198, 184), rgb(255, 209, 244));background-image: -webkit-linear-gradient(0deg, #4af6de, #6bf2ad);height: 66px;">
+                <p
+                    style="font-size:24px;word-break:break-all;padding: 18px 32px;margin:0;background-color: hsla(0,0%,100%,.4);border-radius: 10px 10px 0 0; text-align: center;">
+                    翔工作室2023面试邀请</p>
+            </div>
+            <!-- logo -->
+            <div style="margin: 0px auto; text-align: center;">
+                <img src="https://atcumt-homepage-1256037893.cos.ap-guangzhou.myqcloud.com/static/ico/logo.png"
+                    width="249" height="50" vspace="20">
+            </div>
+            <!-- 文案 -->
+            <div style="margin:0px auto;width:80%">
+                <p style="font-size:18px; margin-top:0px">
+                    同学你好，翔工作室诚邀你参加xx组2023面试。<br><br>【面试时间】：2023年xx月xx日晚上x点—x点<br><br>【面试地点】：易班发展中心大厅（图书馆正对面桃四楼大厅）<br><br>面试只是彼此了解的一个过程，请不要有太大压力。<br><br>收到请回复邮件：“姓名+同意面试”。如果你的面试时间不合适，请回复邮件：“姓名+你合适的面试时间”<br><br>翔工作室祝你面试顺利！
+                </p>
+                <table
+                    style="margin-bottom: 2em; border-collapse: separate; border-spacing: 20px; table-layout: fixed; width: 100%; padding: 0; vertical-align: top; text-align: left;">
+                    <tbody style="display: table-row-group; vertical-align: middle; border-color: inherit;">
+                        <tr style="padding: 0; vertical-align: top; text-align: left;">
+                            <td>
+                                <!-- 回复邮件/改成问卷链接，填回执问卷 -->
+                                <a href="mailto:xxx@xx.com"
+                                    style="display: inline-block; max-width: 80%; padding: 0.75em 2.5em 0.75em 2.5em; background: #ea9448; border-radius: 6px; text-align: center; color: #FFF; font-size: 16px; text-transform: uppercase;">回复邮件</a>
+                            </td>
+                            <td style="vertical-align: middle; text-align: right; text-decoration: none;">
+                                <a style="color: #3498db;" href="https://kxz.atcumt.com">Flying Studio</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </td>
+</table>
