--- a/练习/test.html
+++ b/练习/test.html
@@ -7,19 +7,44 @@
     <title>Document</title>
 </head>
 <style>
-    .box {
-        width: 100px;
-        height: 100px;
+    * {
+        margin: 0;
+        padding: 0;
     }
 
-    .p {
-        color: red;
+    .container {
+        width: 100%;
+        height: 200px;
+        display: flow-root;
+    }
+
+    .left {
+        float: left;
+        width: 200px;
+        height: 200px;
+        background-color: pink;
+    }
+
+    .right {
+        float: right;
+        width: 200px;
+        height: 200px;
+        background-color: pink;
+    }
+
+    .mid {
+        margin: 0 200px;
+        background-color: red;
+        height: 200px;
     }
 </style>
 
 <body>
-    <p class="p">123
-    <div class="box">131321</div>132</p>
+    <div class="container">
+        <div class="left"></div>
+        <div class="right"></div>
+        <div class="mid"></div>
+    </div>
 </body>
 
 </html>
