--- a/练习/test.html
+++ b/练习/test.html
@@ -4,47 +4,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="学习 笔记 娱乐 音乐 视频">
+    <meta name="description" content="欢迎来到刻猫猫的小窝喵">
     <title>Document</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        li {
+            width: 200px;
+            height: 100px;
+            border: 1px solid #000;
+        }
+
+        li:nth-of-type(even) {
+            background-color: #000;
+        }
+
+        li:nth-child(odd) {
+            background-color: red;
+        }
+    </style>
 </head>
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-    }
-
-    .container {
-        width: 100%;
-        height: 200px;
-        display: flow-root;
-    }
-
-    .left {
-        float: left;
-        width: 200px;
-        height: 200px;
-        background-color: pink;
-    }
-
-    .right {
-        float: right;
-        width: 200px;
-        height: 200px;
-        background-color: pink;
-    }
-
-    .mid {
-        margin: 0 200px;
-        background-color: red;
-        height: 200px;
-    }
-</style>
 
 <body>
-    <div class="container">
-        <div class="left"></div>
-        <div class="right"></div>
-        <div class="mid"></div>
-    </div>
+    <ul class="list">
+        <li class="li1"></li>
+        <li class="li1"></li>
+        <li class="li1"></li>
+        <li class="li1"></li>
+        <li class="li2"></li>
+        <li class="li2"></li>
+        <li class="li2"></li>
+        <li class="li2"></li>
+        <li class="li2"></li>
+        <li class="li2"></li>
+    </ul>
 </body>
 
 </html>
