--- a/练习/test.html
+++ b/练习/test.html
@@ -7,41 +7,38 @@
     <meta name="keywords" content="学习 笔记 娱乐 音乐 视频">
     <meta name="description" content="欢迎来到刻猫猫的小窝喵">
     <title>Document</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        li {
-            width: 200px;
-            height: 100px;
-            border: 1px solid #000;
-        }
-
-        li:nth-of-type(even) {
-            background-color: #000;
-        }
-
-        li:nth-child(odd) {
-            background-color: red;
-        }
-    </style>
+    
 </head>
 
 <body>
-    <ul class="list">
-        <li class="li1"></li>
-        <li class="li1"></li>
-        <li class="li1"></li>
-        <li class="li1"></li>
-        <li class="li2"></li>
-        <li class="li2"></li>
-        <li class="li2"></li>
-        <li class="li2"></li>
-        <li class="li2"></li>
-        <li class="li2"></li>
-    </ul>
+    <script>
+        const video = document.createElement('video')
+        video.src = 'https://www.kecat.top/video/jingliu.mp4';
+        video.style.width = '200px';
+        video.style.height = '100px';
+        video.style.position = 'absolute';
+        video.style.top = '20px';
+        video.style.left = '20px';
+        video.currentTime = 2000;
+        video.setAttribute('crossorigin', 'anonymous');
+        const canvas = document.createElement('canvas');
+        canvas.width = 200;
+        canvas.height = 100;
+        video.onloadeddata = function() {
+            canvas.getContext('2d').drawImage(video, 0, 0, 200, 100);
+            const postUrl = canvas.toDataURL('image/png');
+            console.log(postUrl);
+            const img = document.createElement('img');
+            img.src = postUrl;
+            img.width = 200;
+            img.height = 100;
+            img.style.position = 'absolute';
+            img.style.top = '140px';
+            img.style.left = '20px';
+            document.body.appendChild(img);
+        }
+        
+    </script>
 </body>
 
 </html>
